<resources>
    <string name="app_name">ZemogaTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="post_list_fragment_label">List of posts</string>
    <string name="post_details_fragment_label">Post details</string>
    <string name="title_post">Title of the post:</string>
    <string name="description_post">Description of the post:</string>
    <string name="author_post">Author of this post</string>
    <string name="author_name_post">author name:</string>
    <string name="author_email_post">author email:</string>
    <string name="author_username_post">author username:</string>
    <string name="comments_label">COMMENTS </string>
    <string name="delete_post">delete a post icon</string>
    <string name="favorite_post">favorite post</string>
    <string name="button_delete">Delete all posts</string>
    <string name="button_reload">Reload Posts</string>
</resources>