<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_post"
        android:textSize="@dimen/post_Text_size"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_post"
        android:textSize="@dimen/post_sub_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_title" />

    <TextView
        android:id="@+id/tv_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/description_post"
        android:textColor="@color/black"
        android:textSize="@dimen/post_Text_size"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_post"
        android:textSize="@dimen/post_sub_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_description" />

    <TextView
        android:id="@+id/tv_label_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/author_post"
        android:textSize="@dimen/post_Text_size"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <TextView
        android:id="@+id/tv_label_name_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/author_name_post"
        android:textSize="@dimen/post_Text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_author" />

    <TextView
        android:id="@+id/tv_name_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_5dp"
        android:text="@string/author_post"
        android:textSize="@dimen/post_sub_text_size"
        app:layout_constraintBottom_toBottomOf="@id/tv_label_name_author"
        app:layout_constraintStart_toEndOf="@id/tv_label_name_author"
        app:layout_constraintTop_toTopOf="@id/tv_label_name_author" />

    <TextView
        android:id="@+id/tv_label_username_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/author_username_post"
        android:textSize="@dimen/post_Text_size"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_name_author" />

    <TextView
        android:id="@+id/tv_username_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_5dp"
        android:text="@string/author_post"
        android:textSize="@dimen/post_sub_text_size"
        app:layout_constraintStart_toEndOf="@id/tv_label_username_author"
        app:layout_constraintTop_toTopOf="@id/tv_label_username_author" />

    <TextView
        android:id="@+id/tv_label_email_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/author_email_post"
        android:textSize="@dimen/post_Text_size"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_username_author" />

    <TextView
        android:id="@+id/tv_email_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_5dp"
        android:text="@string/author_post"
        android:textSize="@dimen/post_sub_text_size"
        app:layout_constraintStart_toEndOf="@id/tv_label_email_author"
        app:layout_constraintTop_toTopOf="@id/tv_label_email_author" />

</androidx.constraintlayout.widget.ConstraintLayout>